--- a/Platformer_Project/MainWindow.xaml
+++ b/Platformer_Project/MainWindow.xaml
@@ -7,51 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="757" Width="1295" Grid.IsSharedSizeScope="True" ResizeMode="NoResize">
     <Grid Width="1280" Margin="0,0,0,-33">
-        <Image HorizontalAlignment="Left" Height="80" Margin="0,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="80,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="160,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="240,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="320,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="400,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="480,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="560,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="640,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="720,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="800,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="880,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="960,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="1040,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="1120,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="1200,640,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="0,560,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="0,480,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="0,400,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="0,320,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="0,240,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="0,160,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="0,80,0,0" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="80,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="160,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="240,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="320,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="400,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="480,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="560,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="640,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="720,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="800,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="880,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="960,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1040,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1120,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1200,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1200,80,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1200,160,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1200,240,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1200,320,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1200,400,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1200,480,0,0"/>
-        <Image HorizontalAlignment="Left" Height="80" VerticalAlignment="Top" Width="80" Source="/Assets/TestBlock.png" Margin="1200,560,0,0"/>
+        <Rectangle x:Name="Wall1" HorizontalAlignment="Center" Height="120" Margin="0,622,0,0" Stroke="Black" VerticalAlignment="Top" Width="912" Fill="#FF6F84C8"/>
+        <Rectangle x:Name="Wall2" HorizontalAlignment="Left" Height="742" Margin="1096,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="120" Fill="#FF6F84C8" RadiusX="3.052" RadiusY="3.052"/>
+        <Rectangle x:Name="Death1" HorizontalAlignment="Left" Height="46" Margin="0,696,0,0" Stroke="Black" VerticalAlignment="Top" Width="184" Fill="#FFF12643"/>
+        <Rectangle x:Name="Player" HorizontalAlignment="Center" Height="120" Stroke="Black" VerticalAlignment="Top" Width="112" Fill="#FF343847" Margin="0,467,0,0"/>
     </Grid>
 </Window>
