--- a/Platformer_Project/MainWindow.xaml
+++ b/Platformer_Project/MainWindow.xaml
@@ -9,8 +9,9 @@
     <Canvas x:Name="MyCanvas" Focusable="True" Width="1280" Margin="0,0,0,-33" KeyDown="keyisdown" KeyUp="keyisup">
         <Label Name="Timer" Margin="-1372,221,1372,-221"></Label>
         <Rectangle Name="Player" Height="99" Width="67" Fill="Blue" Canvas.Top="151" Canvas.Left="110"/>
-        <Rectangle Name="ground" Height="32" Width="897" Fill="Black" Canvas.Top="729" Canvas.Left="0"/>
-        <Rectangle x:Name="wall" Fill="Black" Height="751" Canvas.Left="797" Canvas.Top="10" Width="100"/>
+        <Rectangle Name="ground" Height="32" Width="1270" Fill="Black" Canvas.Top="729" Canvas.Left="0"/>
+        <Rectangle x:Name="wall" Fill="Black" Height="751" Canvas.Left="1180" Canvas.Top="10" Width="100"/>
+        <Rectangle x:Name="wall2" Fill="Black" Height="751" Canvas.Top="10" Width="100"/>
 
     </Canvas>
 </Window>
