--- a/Platformer_Project/MainWindow.xaml
+++ b/Platformer_Project/MainWindow.xaml
@@ -8,10 +8,10 @@
         Title="MainWindow" Height="757" Width="1295" Grid.IsSharedSizeScope="True" ResizeMode="NoResize">
     <Canvas x:Name="MyCanvas" Focusable="True" Width="1280" Margin="0,0,0,-33" KeyDown="keyisdown" KeyUp="keyisup">
         <Label Name="Timer" Margin="-1372,221,1372,-221"></Label>
-        <Rectangle Name="Player" Height="99" Width="67" Fill="Blue" Canvas.Top="151" Canvas.Left="110"/>
+        <Rectangle Name="Player" Height="49" Width="29" Fill="Blue" Canvas.Top="413" Canvas.Left="263"/>
         <Rectangle Name="ground" Height="32" Width="1270" Fill="Black" Canvas.Top="729" Canvas.Left="0"/>
         <Rectangle x:Name="wall" Fill="Black" Height="751" Canvas.Left="1180" Canvas.Top="10" Width="100"/>
-        <Rectangle x:Name="wall2" Fill="Black" Height="751" Canvas.Top="10" Width="105" Canvas.Right="1180"/>
+        <Rectangle x:Name="wall2" Fill="Black" Height="751" Canvas.Top="10" Width="4" Canvas.Left="10"/>
 
     </Canvas>
 </Window>
