--- a/Platformer_Project/Window2.xaml
+++ b/Platformer_Project/Window2.xaml
@@ -5,9 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Platformer_Project"
         mc:Ignorable="d"
-        Title="Window2" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Window2" Height="720" Width="1280" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <ImageBrush ImageSource="SelectBGv3.png"/>
+    </Window.Background>
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="306,154,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="594,612,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="" HorizontalAlignment="Left" Margin="476,61,0,0" VerticalAlignment="Top" Width="326" Height="162" Click="Button_Click_1">
+            <Button.Background>
+                <ImageBrush ImageSource="L1Button.png"/>
+            </Button.Background>
+        </Button>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="478,253,0,0" VerticalAlignment="Top" Width="324" Height="172" Click="Button_Click_2">
+            <Button.Background>
+                <ImageBrush ImageSource="L2Button.png"/>
+            </Button.Background>
+        </Button>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="489,433,0,0" VerticalAlignment="Top" Width="297" Height="174" Click="Button_Click_3">
+            <Button.Background>
+                <ImageBrush ImageSource="L3Button.png"/>
+            </Button.Background>
+        </Button>
 
     </Grid>
 </Window>
