--- a/Platformer_Project/Window1.xaml
+++ b/Platformer_Project/Window1.xaml
@@ -8,11 +8,32 @@
         Title="Window1" Height="720" Width="1280" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="StartMenu.png"/>
+            <ImageBrush ImageSource="/Assets/Start/StartMenu.png"/>
         </Grid.Background>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="571,631,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="235,631,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="965,631,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2" Loaded="loaded"/>
+        <Button Content="" HorizontalAlignment="Left" Margin="588,603,0,0" VerticalAlignment="Top" Width="169" Click="Button_Click" Height="86" BorderThickness="0,0,0,0">
+            <Button.Foreground>
+                <ImageBrush ImageSource="/Assets/Start/SelectBTN.png"/>
+            </Button.Foreground>
+            <Button.Background>
+                <ImageBrush ImageSource="/Assets/Start/SelectBTN.png"/>
+            </Button.Background>
+        </Button>
+        <Button Content="" HorizontalAlignment="Left" Margin="205,603,0,0" VerticalAlignment="Top" Width="169" Click="Button_Click_1" Height="86" BorderThickness="0,0,0,0">
+            <Button.Foreground>
+                <ImageBrush ImageSource="/Assets/Start/StartBTN.png"/>
+            </Button.Foreground>
+            <Button.Background>
+                <ImageBrush ImageSource="/Assets/Start/StartBTN.png"/>
+            </Button.Background>
+        </Button>
+        <Button Content="" HorizontalAlignment="Left" Margin="963,603,0,0" VerticalAlignment="Top" Width="169" Click="Button_Click_2" Loaded="loaded" Height="86" BorderThickness="0,0,0,0">
+            <Button.Foreground>
+                <ImageBrush ImageSource="/Assets/Start/QuitBTN.png"/>
+            </Button.Foreground>
+            <Button.Background>
+                <ImageBrush ImageSource="/Assets/Start/QuitBTN.png"/>
+            </Button.Background>
+        </Button>
 
     </Grid>
 </Window>
