--- a/Platformer_Project/Window2.xaml
+++ b/Platformer_Project/Window2.xaml
@@ -7,23 +7,34 @@
         mc:Ignorable="d"
         Title="Window2" Height="720" Width="1280" WindowStartupLocation="CenterScreen">
     <Window.Background>
-        <ImageBrush ImageSource="SelectBGv3.png"/>
+        <ImageBrush ImageSource="/Assets/Select/SelectBGv3.png"/>
     </Window.Background>
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="594,612,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Button Content="" HorizontalAlignment="Left" Margin="476,61,0,0" VerticalAlignment="Top" Width="326" Height="162" Click="Button_Click_1">
+        <Grid.Background>
+            <ImageBrush ImageSource="/Assets/Select/SelectBGv3.png"/>
+        </Grid.Background>
+        <Button Content="" HorizontalAlignment="Center" Margin="0,41,0,0" VerticalAlignment="Top" Width="364" Height="200" Click="Button_Click_1" BorderThickness="0,0,0,0" SnapsToDevicePixels="True">
+            <Button.Foreground>
+                <ImageBrush ImageSource="/Assets/Select/L1Button.png"/>
+            </Button.Foreground>
             <Button.Background>
-                <ImageBrush ImageSource="L1Button.png"/>
+                <ImageBrush ImageSource="/Assets/Select/L1Button.png"/>
             </Button.Background>
         </Button>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="478,253,0,0" VerticalAlignment="Top" Width="324" Height="172" Click="Button_Click_2">
+        <Button Content="" HorizontalAlignment="Center" Margin="0,246,0,0" VerticalAlignment="Top" Width="364" Height="200" Click="Button_Click_2" BorderThickness="0,0,0,0">
+            <Button.Foreground>
+                <ImageBrush ImageSource="/Assets/Select/L2Button.png"/>
+            </Button.Foreground>
             <Button.Background>
-                <ImageBrush ImageSource="L2Button.png"/>
+                <ImageBrush ImageSource="/Assets/Select/L2Button.png"/>
             </Button.Background>
         </Button>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="489,433,0,0" VerticalAlignment="Top" Width="297" Height="174" Click="Button_Click_3">
+        <Button Content="" HorizontalAlignment="Center" Margin="0,451,0,0" VerticalAlignment="Top" Width="364" Height="200" Click="Button_Click_3" BorderThickness="0,0,0,0">
+            <Button.Foreground>
+                <ImageBrush ImageSource="/Assets/Select/L3Button.png"/>
+            </Button.Foreground>
             <Button.Background>
-                <ImageBrush ImageSource="L3Button.png"/>
+                <ImageBrush ImageSource="/Assets/Select/L3Button.png"/>
             </Button.Background>
         </Button>
 
