--- a/Platformer_Project/Window3.xaml
+++ b/Platformer_Project/Window3.xaml
@@ -7,46 +7,54 @@
         mc:Ignorable="d"
         Title="Window3" Height="720" Width="1280" WindowStartupLocation="CenterScreen" Loaded="loaded">
     <Window.Background>
-        <ImageBrush ImageSource="LevelBG.png"/>
+        <ImageBrush ImageSource="/Assets/Levels/LevelBG.png"/>
     </Window.Background>
     <Canvas>
+        <Canvas.Background>
+            <ImageBrush ImageSource="/Assets/Levels/LevelBG.png"/>
+        </Canvas.Background>
         <Rectangle HorizontalAlignment="Left" Height="521" Margin="0,168,0,0" Stroke="Black" VerticalAlignment="Top" Width="139">
             <Rectangle.Fill>
-                <ImageBrush ImageSource="L1-1.png"/>
+                <ImageBrush ImageSource="/Assets/Levels/1/L1-1.png"/>
             </Rectangle.Fill>
         </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="117" Margin="474,572,0,0" Stroke="Black" VerticalAlignment="Top" Width="557">
             <Rectangle.Fill>
-                <ImageBrush ImageSource="L1-2.png"/>
+                <ImageBrush ImageSource="/Assets/Levels/1/L1-2.png"/>
             </Rectangle.Fill>
         </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="465" Margin="931,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="100">
             <Rectangle.Fill>
-                <ImageBrush ImageSource="L1-3.png"/>
+                <ImageBrush ImageSource="/Assets/Levels/1/L1-3.png"/>
             </Rectangle.Fill>
         </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="521" Margin="1164,168,0,0" Stroke="Black" VerticalAlignment="Top" Width="108">
             <Rectangle.Fill>
-                <ImageBrush ImageSource="L1-4.png"/>
+                <ImageBrush ImageSource="/Assets/Levels/1/L1-4.png"/>
             </Rectangle.Fill>
         </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="100" Margin="25,68,0,0" Stroke="Black" VerticalAlignment="Top" Width="100" StrokeThickness="0">
             <Rectangle.Fill>
-                <ImageBrush ImageSource="SpriteV5.png"/>
+                <ImageBrush ImageSource="/Assets/Character/SpriteV5.png"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Rectangle Fill="#FFA44646" HorizontalAlignment="Left" Height="100" Margin="1172,68,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle HorizontalAlignment="Left" Height="100" Margin="1172,68,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="100">
+            <Rectangle.Fill>
+                <ImageBrush ImageSource="/Assets/Levels/Cake.png"/>
+            </Rectangle.Fill>
+        </Rectangle>
         <Rectangle Height="23" Canvas.Left="-72" Stroke="Black" StrokeThickness="0" Canvas.Top="168" Width="211" Tag="ground"/>
         <Rectangle Height="23" Canvas.Left="474" Stroke="Black" StrokeThickness="0" Canvas.Top="572" Width="557" Tag="ground"/>
         <Rectangle Height="23" Canvas.Left="1164" Stroke="Black" StrokeThickness="0" Canvas.Top="173" Width="108" Tag="ground"/>
         <Rectangle Height="498" Canvas.Left="39" Stroke="Black" StrokeThickness="0" Canvas.Top="191" Width="100" Tag="leftWall"/>
         <Rectangle Height="150" Canvas.Left="931" Stroke="Black" StrokeThickness="0" Canvas.Top="600" Width="100" Tag="leftWall"/>
-        <Rectangle Height="179" Canvas.Left="474" Stroke="Black" StrokeThickness="0" Canvas.Top="595" Width="100" Tag="leftWall"/>
+        <Rectangle Height="179" Canvas.Left="474" Stroke="Black" StrokeThickness="0" Canvas.Top="595" Width="100" Tag="rightWall"/>
         <Rectangle Height="465" Canvas.Left="1001" Stroke="Black" StrokeThickness="0" Width="30" Tag="leftWall"/>
         <Rectangle Height="465" Canvas.Left="931" Stroke="Black" StrokeThickness="0" Width="27" Tag="rightWall"/>
         <Rectangle Height="498" Canvas.Left="1164" Stroke="Black" StrokeThickness="0" Width="27" Tag="rightWall" Canvas.Top="191"/>
         <Rectangle Height="14" Canvas.Left="931" Stroke="Black" StrokeThickness="0" Canvas.Top="451" Width="100" Tag="ceiling"/>
         <Rectangle Height="55" Canvas.Left="137" Stroke="Black" StrokeThickness="0" Canvas.Top="689" Width="1027" Tag="death"/>
+        <Rectangle Height="14" Stroke="Black" StrokeThickness="0" Width="1280" Tag="ceiling"/>
 
     </Canvas>
 </Window>
