--- a/Platformer_Project/Window2.xaml
+++ b/Platformer_Project/Window2.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Platformer_Project"
         mc:Ignorable="d"
-        Title="Window2" Height="720" Width="1280" WindowStartupLocation="CenterScreen">
+        Title="Window2" Height="720" Width="1280" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Window.Background>
         <ImageBrush ImageSource="/Assets/Select/SelectBGv3.png"/>
     </Window.Background>
