--- a/Platformer_Project/Window3.xaml
+++ b/Platformer_Project/Window3.xaml
@@ -13,7 +13,7 @@
         <Canvas.Background>
             <ImageBrush ImageSource="/Assets/Levels/LevelBG.png"/>
         </Canvas.Background>
-		<Label Name="Timer" Margin="-1372,221,1372,-221"></Label>
+        <Label Name="Timer" Margin="-1372,221,1372,-221"></Label>
         <Rectangle HorizontalAlignment="Left" Height="521" Margin="0,168,0,0" Stroke="Black" VerticalAlignment="Top" Width="139">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Levels/1/L1-1.png"/>
@@ -24,38 +24,38 @@
                 <ImageBrush ImageSource="/Assets/Levels/1/L1-2.png"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Rectangle HorizontalAlignment="Left" Height="465" Margin="931,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="100">
+        <Rectangle HorizontalAlignment="Left" Height="451" Stroke="Black" VerticalAlignment="Top" Width="100" Canvas.Left="896">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Levels/1/L1-3.png"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Rectangle HorizontalAlignment="Left" Height="521" Margin="1164,168,0,0" Stroke="Black" VerticalAlignment="Top" Width="108">
+        <Rectangle HorizontalAlignment="Left" Height="521" Stroke="Black" VerticalAlignment="Top" Width="121" Canvas.Left="1143" Canvas.Top="168">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Levels/1/L1-4.png"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Rectangle Name="Player" HorizontalAlignment="Left" Height="100" Margin="25,68,0,0" Stroke="Black" VerticalAlignment="Top" Width="100" StrokeThickness="0" Tag="player">
+        <Rectangle Name="Player" HorizontalAlignment="Left" Height="100" Stroke="Black" VerticalAlignment="Top" Width="100" StrokeThickness="0" Tag="player" Canvas.Left="25" Canvas.Top="63">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Character/SpriteV5.png"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Rectangle HorizontalAlignment="Left" Height="100" Margin="1172,68,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="100">
+        <Rectangle HorizontalAlignment="Left" Height="64" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="70" Tag="goal" Canvas.Left="1184" Canvas.Top="80">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Levels/Cake.png"/>
             </Rectangle.Fill>
         </Rectangle>
         <Rectangle Height="23" Canvas.Left="-72" Stroke="Black" StrokeThickness="0" Canvas.Top="168" Width="211" Tag="ground"/>
         <Rectangle Height="23" Canvas.Left="474" Stroke="Black" StrokeThickness="0" Canvas.Top="572" Width="557" Tag="ground"/>
-        <Rectangle Height="23" Canvas.Left="1164" Stroke="Black" StrokeThickness="0" Canvas.Top="173" Width="108" Tag="ground"/>
+        <Rectangle Height="23" Canvas.Left="1143" Stroke="Black" StrokeThickness="0" Canvas.Top="173" Width="129" Tag="ground"/>
         <Rectangle Height="498" Canvas.Left="39" Stroke="Black" StrokeThickness="0" Canvas.Top="191" Width="100" Tag="leftWall"/>
         <Rectangle Height="150" Canvas.Left="931" Stroke="Black" StrokeThickness="0" Canvas.Top="600" Width="100" Tag="leftWall"/>
         <Rectangle Height="179" Canvas.Left="474" Stroke="Black" StrokeThickness="0" Canvas.Top="595" Width="100" Tag="rightWall"/>
-        <Rectangle Height="465" Canvas.Left="1001" Stroke="Black" StrokeThickness="0" Width="30" Tag="leftWall"/>
-        <Rectangle Height="465" Canvas.Left="931" Stroke="Black" StrokeThickness="0" Width="27" Tag="rightWall"/>
-        <Rectangle Height="498" Canvas.Left="1164" Stroke="Black" StrokeThickness="0" Width="27" Tag="rightWall" Canvas.Top="191"/>
-        <Rectangle Height="14" Canvas.Left="931" Stroke="Black" StrokeThickness="0" Canvas.Top="451" Width="100" Tag="ceiling"/>
+        <Rectangle Height="422" Canvas.Left="966" Stroke="Black" StrokeThickness="0" Width="30" Tag="leftWall" Canvas.Top="10"/>
+        <Rectangle Height="422" Canvas.Left="896" Stroke="Black" StrokeThickness="0" Width="27" Tag="rightWall" Canvas.Top="10"/>
+        <Rectangle Height="498" Canvas.Left="1143" Stroke="Black" StrokeThickness="0" Width="27" Tag="rightWall" Canvas.Top="191"/>
+        <Rectangle Height="14" Canvas.Left="896" Stroke="Black" StrokeThickness="0" Canvas.Top="437" Width="100" Tag="ceiling"/>
         <Rectangle Height="55" Canvas.Left="137" Stroke="Black" StrokeThickness="0" Canvas.Top="689" Width="1027" Tag="death"/>
-        <Rectangle Height="14" Stroke="Black" StrokeThickness="0" Width="1280" Tag="ceiling"/>
+        <Rectangle Height="4" Stroke="Black" StrokeThickness="0" Width="1270" Tag="ceiling" Canvas.Top="10" Canvas.Left="10"/>
 
     </Canvas>
 </Window>
