--- a/Platformer_Project/Window5.xaml
+++ b/Platformer_Project/Window5.xaml
@@ -5,15 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Platformer_Project"
         mc:Ignorable="d"
-        Title="Window5" Height="720" Width="1282" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="Window5" Height="720" Width="1282" WindowStartupLocation="CenterScreen" Loaded="loaded" ResizeMode="NoResize">
     <Window.Background>
         <ImageBrush ImageSource="/Assets/Levels/LevelBG.png"/>
     </Window.Background>
-    <Canvas>
+    <Canvas x:Name="MyCanvas" Focusable="True" KeyDown="keyisdown" KeyUp="keyisup">
         <Canvas.Background>
             <ImageBrush ImageSource="/Assets/Levels/LevelBG.png"/>
         </Canvas.Background>
-        <Rectangle HorizontalAlignment="Left" Height="100" Margin="215,92,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="100">
+        <Rectangle Name="Player" HorizontalAlignment="Left" Height="100" Margin="215,92,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="100">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Character/SpriteV5.png"/>
             </Rectangle.Fill>
