--- a/Platformer_Project/Window5.xaml
+++ b/Platformer_Project/Window5.xaml
@@ -13,12 +13,10 @@
         <Canvas.Background>
             <ImageBrush ImageSource="/Assets/Levels/LevelBG.png"/>
         </Canvas.Background>
-        <Rectangle Name="Player" HorizontalAlignment="Left" Height="100" Margin="215,92,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="100">
-            <Rectangle.Fill>
-                <ImageBrush ImageSource="/Assets/Character/SpriteV5.png"/>
-            </Rectangle.Fill>
+        <Rectangle Name="Player" HorizontalAlignment="Left" Height="100" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="100" Canvas.Left="214" Canvas.Top="92">
+
         </Rectangle>
-        <Rectangle HorizontalAlignment="Left" Height="100" Margin="0,192,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="410">
+        <Rectangle HorizontalAlignment="Left" Height="100" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="410" Canvas.Top="192">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Levels/3/L3-1.png"/>
             </Rectangle.Fill>
@@ -33,7 +31,7 @@
                 <ImageBrush ImageSource="/Assets/Levels/3/L3-3.png"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Rectangle HorizontalAlignment="Left" Height="262" Margin="604,128,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="289">
+        <Rectangle HorizontalAlignment="Left" Height="238" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="256" Canvas.Left="637" Canvas.Top="128">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Levels/3/L3-4.png"/>
             </Rectangle.Fill>
@@ -43,25 +41,28 @@
                 <ImageBrush ImageSource="/Assets/Levels/3/L3-5.png"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Rectangle HorizontalAlignment="Left" Height="100" Margin="10,411,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="100">
+        <Rectangle HorizontalAlignment="Left" Height="100" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="100" Tag="goal" Canvas.Left="10" Canvas.Top="411">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Levels/Cake.png"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Rectangle Height="23" Stroke="Black" StrokeThickness="0" Canvas.Top="192" Width="410" Tag="ground"/>
-        <Rectangle Height="23" Canvas.Left="604" Stroke="Black" StrokeThickness="0" Canvas.Top="128" Width="470" Tag="ground"/>
-        <Rectangle Height="23" Stroke="Black" StrokeThickness="0" Canvas.Top="516" Width="258" Tag="ground"/>
+        <Rectangle Height="23" Stroke="Black" StrokeThickness="0" Canvas.Top="192" Width="400" Tag="ground" Canvas.Left="10"/>
+        <Rectangle Height="23" Canvas.Left="637" Stroke="Black" StrokeThickness="0" Canvas.Top="128" Width="437" Tag="ground"/>
+        <Rectangle Height="23" Stroke="Black" StrokeThickness="0" Canvas.Top="516" Width="248" Tag="ground" Canvas.Left="10"/>
         <Rectangle Height="23" Canvas.Left="691" Stroke="Black" StrokeThickness="0" Canvas.Top="589" Width="581" Tag="ground"/>
         <Rectangle Height="145" Canvas.Left="155" Stroke="Black" StrokeThickness="0" Canvas.Top="544" Width="100" Tag="leftWall"/>
         <Rectangle Height="72" Canvas.Left="310" Stroke="Black" StrokeThickness="0" Canvas.Top="220" Width="100" Tag="leftWall"/>
-        <Rectangle Height="320" Canvas.Left="1008" Stroke="Black" StrokeThickness="0" Canvas.Top="156" Width="66" Tag="leftWall"/>
+        <Rectangle Height="343" Canvas.Left="1008" Stroke="Black" StrokeThickness="0" Canvas.Top="156" Width="66" Tag="leftWall"/>
         <Rectangle Height="179" Canvas.Left="698" Stroke="Black" StrokeThickness="0" Canvas.Top="612" Width="100" Tag="rightWall"/>
-        <Rectangle Height="179" Canvas.Left="898" Stroke="Black" StrokeThickness="0" Canvas.Top="302" Width="100" Tag="rightWall"/>
-        <Rectangle Height="196" Canvas.Left="604" Stroke="Black" StrokeThickness="0" Canvas.Top="156" Width="100" Tag="rightWall"/>
+        <Rectangle Height="197" Canvas.Left="898" Stroke="Black" StrokeThickness="0" Canvas.Top="302" Width="100" Tag="rightWall"/>
+        <Rectangle Height="187" Canvas.Left="637" Stroke="Black" StrokeThickness="0" Canvas.Top="149" Width="89" Tag="rightWall"/>
         <Rectangle Height="35" Canvas.Left="893" Stroke="Black" StrokeThickness="0" Canvas.Top="486" Width="181" Tag="ceiling"/>
-        <Rectangle Height="33" Canvas.Left="604" Stroke="Black" StrokeThickness="0" Canvas.Top="357" Width="289" Tag="ceiling"/>
-        <Rectangle Height="14" Stroke="Black" StrokeThickness="0" Canvas.Top="278" Width="392" Tag="ceiling"/>
-        <Rectangle Height="14" Stroke="Black" StrokeThickness="0" Width="1282" Tag="ceiling"/>
+        <Rectangle Height="30" Canvas.Left="637" Stroke="Black" StrokeThickness="0" Canvas.Top="336" Width="256" Tag="ceiling"/>
+        <Rectangle Height="14" Stroke="Black" StrokeThickness="0" Canvas.Top="278" Width="382" Tag="ceiling" Canvas.Left="10"/>
+        <Rectangle Height="4" Stroke="Black" StrokeThickness="0" Width="1272" Tag="ceiling" Canvas.Top="10" Canvas.Left="10"/>
+        <Rectangle Height="55" Canvas.Left="137" Stroke="Black" StrokeThickness="0" Canvas.Top="689" Width="1027" Tag="death"/>
+        <Rectangle Height="542" Canvas.Left="10" Stroke="Black" StrokeThickness="0" Canvas.Top="19" Width="0" Tag="leftWall"/>
+        <Rectangle Height="570" Canvas.Left="1261" Stroke="Black" StrokeThickness="0" Width="5" Tag="rightWall" Canvas.Top="19"/>
 
     </Canvas>
 </Window>
