--- a/Platformer_Project/Window1.xaml
+++ b/Platformer_Project/Window1.xaml
@@ -10,7 +10,7 @@
         <Grid.Background>
             <ImageBrush ImageSource="/Assets/Start/StartMenu.png"/>
         </Grid.Background>
-        <Button Content="" HorizontalAlignment="Left" Margin="588,603,0,0" VerticalAlignment="Top" Width="169" Click="Button_Click" Height="86" BorderThickness="0,0,0,0">
+        <Button x:Name="LevelSelect" Content="" HorizontalAlignment="Left" Margin="588,603,0,0" VerticalAlignment="Top" Width="169" Click="Button_Click" Height="86" BorderThickness="0,0,0,0">
             <Button.Foreground>
                 <ImageBrush ImageSource="/Assets/Start/SelectBTN.png"/>
             </Button.Foreground>
@@ -18,7 +18,7 @@
                 <ImageBrush ImageSource="/Assets/Start/SelectBTN.png"/>
             </Button.Background>
         </Button>
-        <Button Content="" HorizontalAlignment="Left" Margin="205,603,0,0" VerticalAlignment="Top" Width="169" Click="Button_Click_1" Height="86" BorderThickness="0,0,0,0">
+        <Button x:Name="Start" Content="" HorizontalAlignment="Left" Margin="205,603,0,0" VerticalAlignment="Top" Width="169" Click="Button_Click_1" Height="86" BorderThickness="0,0,0,0">
             <Button.Foreground>
                 <ImageBrush ImageSource="/Assets/Start/StartBTN.png"/>
             </Button.Foreground>
@@ -26,7 +26,7 @@
                 <ImageBrush ImageSource="/Assets/Start/StartBTN.png"/>
             </Button.Background>
         </Button>
-        <Button Content="" HorizontalAlignment="Left" Margin="963,603,0,0" VerticalAlignment="Top" Width="169" Click="Button_Click_2" Loaded="loaded" Height="86" BorderThickness="0,0,0,0">
+        <Button x:Name="Quit" Content="" HorizontalAlignment="Left" Margin="963,603,0,0" VerticalAlignment="Top" Width="169" Click="Button_Click_2" Loaded="loaded" Height="86" BorderThickness="0,0,0,0">
             <Button.Foreground>
                 <ImageBrush ImageSource="/Assets/Start/QuitBTN.png"/>
             </Button.Foreground>
